--- a/weddingpro.css
+++ b/weddingpro.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap');
 .startpage{
     text-align: center;
     padding-top: 300px;
@@ -12,10 +13,11 @@
     font-family: Georgia;
 }
 .home{
-    background-image: url("https://res.cloudinary.com/sandy2818/image/upload/v1664991990/WhatsApp_Image_2022-10-05_at_11.15.17_PM_sd2nsm.jpg");
+    background-image: url("https://res.cloudinary.com/sandy2818/image/upload/v1667491550/WhatsApp_Image_2022-11-03_at_9.35.29_PM_lmzioe.jpg");
     height: 100vh;
-    text-align: center;
-    width: 100vw;
+/*     filter: blur(8px);
+ */    text-align: center;
+    /* width: 100vw; */
 }
 .heading{
     font-family: Brush Script MT;
@@ -49,12 +51,12 @@
 .venue{
     background-color: #f5eeda;
     text-align: center;
-    height: 100vh;
+    padding-bottom: 30px;
+    padding: 30px;
 }
 .vertical {
-    border-left: 150px solid gold;
-    border-right: 150px solid gold;
-    height: 500px;
+    border-left: 100px solid gold;
+    border-right: 100px solid gold;
     /* margin-left: 100px;
     margin-right: 100px; */
     border-top: 6px solid gold;
@@ -63,9 +65,11 @@
     padding-right: 100px;
     padding-top: 50px;
     font-size: 20px;
+    text-align: center;
 }
 .image{
-    height: 25vh;
+    height: 50vh;
+    margin-bottom: 30px !important;
 }
 .or{
     color: black !important;
